@@ -1,3 +1,10 @@
+2005-10-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/1321
+	* binutils-all/link-order.s: New.
+
+	* binutils-all/objcopy.exp: Check ia64 link order.
+
 2005-10-11  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* binutils-all/windres/escapex-2.rc: New file.
